...
    scrollRef.current?.flashScrollIndicators();
  });

  const tabBarHeight = useBottomTabBarHeight();

  return (
    <View testID="profile-screen" style={styles.container}>
      {isFocused ? <StatusBar style="light" /> : null}
      <View style={styles.backgroundProfileContainer}>
        <Animated.View style={imgStyle}>
          <UserDogProfileHeader />
        </Animated.View>
        <Animated.View style={[styles.backgroundOverlay, overlayStyle]} />
...
              </Config.Container>

              <Config.Arrow />
            </Config.Root>

            <Config.Root
              testID="profile-open-edit"
              onPress={() => router.push(SceneName.EditProfile)}
            >
              <Dog width={22} height={22} fill={theme.colors.text} />
              <Config.Container>
                <Config.Title>{t("profile.editProfile")}</Config.Title>
                <Config.Description>
...

            <LanguageConfig />
            <ThemeConfig />

            <Divider style={{ margin: theme.spacing[4] }} />

            <Config.Root testID="profile-open-terms" onPress={openTermsOfUse}>
              <Paperwork width={22} height={22} fill={theme.colors.text} />
              <Config.Container>
                <Config.Title>{t("profile.termsOfUse")}</Config.Title>
                <Config.Description>
                  {t("profile.termsOfUseDescription")}
                </Config.Description>
              </Config.Container>

              <Config.Arrow />
            </Config.Root>

            <Config.Root
              testID="profile-open-privacy"
              onPress={openPrivacyPolicy}
            >
              <Paperwork width={22} height={22} fill={theme.colors.text} />
              <Config.Container>
                <Config.Title>{t("profile.privacyPolicy")}</Config.Title>
                <Config.Description>
...
                </Config.Description>
              </Config.Container>

              <Config.Arrow />
            </Config.Root>

            <Config.Root testID="profile-open-rate" onPress={openRateTheApp}>
              <Paperwork width={22} height={22} fill={theme.colors.text} />
              <Config.Container>
                <Config.Title>{t("profile.rateTheApp")}</Config.Title>
                <Config.Description>
                  {t("profile.rateTheAppDescription")}
                </Config.Description>
...
