...
          "rgba(0, 0, 0, .7)",
        ]}
      >
        <InfoBlock>
          <NameRow style={{ gap: theme.spacing[1.5] }}>
            <PersonalInfo.Name
              testID="profile-dog-name"
              style={{ fontSize: theme.typography.sizes.xl.size }}
            >
              {dog.name}
              {dog.birthDate ? (
                <PersonalInfo.Age
                  style={{ fontSize: theme.typography.sizes.lg.size }}
...
